--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
 		"react/jsx-indent-props": ["error", "tab"],
 		"import/prefer-default-export": "off",
 		"react/prefer-stateless-function": [0, { "ignorePureComponents": true }],
-		"react/no-multi-comp": [0]
+		"react/no-multi-comp": [0],
+		"arrow-parens": [0]
 	}
 }
