--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-  "name": "webpack-test",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "webpack-dev-server --mode development --hot --open",
-    "build": "webpack --mode production",
-    "lint:es": "eslint --config .eslintrc src/*.js",
-    "lint": "npm run lint:es"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
-    "prettier": "^1.13.5",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
-  },
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "lodash": "^4.17.10",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
-  }
+	"name": "webpack-test",
+	"version": "0.0.1",
+	"private": true,
+	"main": "server.js",
+	"scripts": {
+		"start": "webpack-dev-server --mode development --open --hot",
+		"build": "webpack --mode production",
+		"lint:es": "eslint --config .eslintrc src/*.js",
+		"lint": "npm run lint:es",
+		"start-micro": "micro -p 8080"
+	},
+	"devDependencies": {
+		"babel-core": "^6.26.3",
+		"babel-eslint": "^8.2.3",
+		"babel-loader": "^7.1.4",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-plugin-transform-react-jsx": "^6.24.1",
+		"babel-preset-latest": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"css-loader": "^0.28.11",
+		"eslint": "^4.19.1",
+		"eslint-config-airbnb": "^16.1.0",
+		"eslint-plugin-import": "^2.12.0",
+		"eslint-plugin-jsx-a11y": "^6.0.3",
+		"eslint-plugin-react": "^7.9.1",
+		"html-webpack-plugin": "^3.2.0",
+		"node-sass": "^4.9.0",
+		"prettier": "^1.13.5",
+		"sass-loader": "^7.0.3",
+		"style-loader": "^0.21.0",
+		"webpack": "^4.12.0",
+		"webpack-cli": "^3.0.8",
+		"webpack-dev-server": "^3.1.4"
+	},
+	"dependencies": {
+		"benchmark": "^2.1.4",
+		"classnames": "^2.2.6",
+		"lodash": "^4.17.10",
+		"micro": "^9.3.2",
+		"microtime": "^2.1.8",
+		"prop-types": "^15.6.2",
+		"react": "^16.4.1",
+		"react-bootstrap": "^0.32.1",
+		"react-dom": "^16.4.1",
+		"react-perf-devtool": "^3.0.7",
+		"react-router-dom": "^4.3.1"
+	}
 }
