--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
 		"import/prefer-default-export": "off",
 		"react/prefer-stateless-function": [0, { "ignorePureComponents": true }],
 		"react/no-multi-comp": [0],
-		"arrow-parens": [0]
+		"arrow-parens": [0],
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
 	}
 }
